added fancy button

--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,14 @@
 
+@property --border-angle-2
+{
+    syntax: "<angle>";
+    inherits: true;
+    initial-value: 90deg;
+}
+
+@property --border-angle-3
+{
+    syntax: "<angle>";
+    inherits: true;
+    initial-value: 180deg;
+}
